// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard Page 2 1`] = `
<div>
  <div data-size="sm">
    <fieldset>
      <legend data-weight="medium">
        Størrelse
        <code data-size="xs">
          (data-size)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="primary"
          type="button"
          value="sm"
          id="togglegroup-item-«rk»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«ri»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          sm
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="md"
          id="togglegroup-item-«rm»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«ri»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          md
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="lg"
          id="togglegroup-item-«ro»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«ri»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          lg
        </button>
      </div>
    </fieldset>
    <fieldset>
      <legend data-weight="medium">
        Fargemodus
        <code data-size="xs">
          (data-color-scheme)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="tertiary"
          type="button"
          value="light"
          id="togglegroup-item-«rr»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«rp»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          light
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="dark"
          id="togglegroup-item-«rt»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«rp»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          dark
        </button>
        <button
          data-variant="primary"
          type="button"
          value="auto"
          id="togglegroup-item-«rv»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«rp»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          auto
        </button>
      </div>
    </fieldset>
  </div>
  <div
    data-size="sm"
    data-color-scheme="auto"
  >
    <h1 data-size="md">
      Schweigaardsgate skole
    </h1>
    <div>
      <div
        role="tablist"
        tabindex="0"
      >
        <button
          aria-selected="false"
          id="tab-«r10»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Oversikt
        </button>
        <button
          aria-selected="true"
          id="tab-«r11»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          Prøver
        </button>
        <button
          aria-selected="false"
          id="tab-«r12»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Prøvesvar
        </button>
        <button
          aria-selected="false"
          id="tab-«r13»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Innstillinger
        </button>
      </div>
      <div role="tabpanel">
        <p data-variant="default">
          Oversikt over prøver for Schweigaardsgate skole.
        </p>
        <div>
          <div>
            <div data-variant="default">
              <h2>
                Viktige datoer
              </h2>
              <ul>
                <li>
                  Prøvestart: 12. april
                </li>
                <li>
                  Prøvefrist: 5. mai
                </li>
                <li>
                  Svarfrist: 28. mai
                </li>
              </ul>
            </div>
          </div>
          <div>
            <h2>
              Prøver
            </h2>
            <div>
              <a
                href="/"
                data-variant="default"
                data-color="neutral"
              >
                <h2>
                  Administrer prøve X
                </h2>
              </a>
              <a
                href="/"
                data-variant="default"
                data-color="neutral"
              >
                <h2>
                  Administrer prøve Y
                </h2>
              </a>
            </div>
            <div>
              <div
                role="radiogroup"
                tabindex="0"
              >
                <button
                  data-variant="primary"
                  type="button"
                  value="graph"
                  id="togglegroup-item-«r16»"
                  aria-checked="true"
                  aria-current="true"
                  role="radio"
                  name="togglegroup-name-«r14»"
                  data-roving-tabindex-item="true"
                  tabindex="0"
                >
                  Vis som graf
                </button>
                <button
                  data-variant="tertiary"
                  type="button"
                  value="table"
                  id="togglegroup-item-«r18»"
                  aria-checked="false"
                  aria-current="false"
                  role="radio"
                  name="togglegroup-name-«r14»"
                  data-roving-tabindex-item="true"
                  tabindex="-1"
                >
                  Vis som tabell
                </button>
              </div>
              <button
                data-variant="tertiary"
                type="button"
              >
                <svg
                  xmlns="http://www.w3.org/2000/svg"
                  width="1em"
                  height="1em"
                  fill="none"
                  viewbox="0 0 24 24"
                  focusable="false"
                  role="img"
                  aria-hidden="true"
                >
                  <path
                    fill="currentColor"
                    fill-rule="evenodd"
                    d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                    clip-rule="evenodd"
                  >
                  </path>
                </svg>
                Last ned PDF
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Page 3 1`] = `
<div>
  <div data-size="sm">
    <fieldset>
      <legend data-weight="medium">
        Størrelse
        <code data-size="xs">
          (data-size)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="primary"
          type="button"
          value="sm"
          id="togglegroup-item-«r1c»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«r1a»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          sm
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="md"
          id="togglegroup-item-«r1e»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r1a»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          md
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="lg"
          id="togglegroup-item-«r1g»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r1a»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          lg
        </button>
      </div>
    </fieldset>
    <fieldset>
      <legend data-weight="medium">
        Fargemodus
        <code data-size="xs">
          (data-color-scheme)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="tertiary"
          type="button"
          value="light"
          id="togglegroup-item-«r1j»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r1h»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          light
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="dark"
          id="togglegroup-item-«r1l»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r1h»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          dark
        </button>
        <button
          data-variant="primary"
          type="button"
          value="auto"
          id="togglegroup-item-«r1n»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«r1h»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          auto
        </button>
      </div>
    </fieldset>
  </div>
  <div
    data-size="sm"
    data-color-scheme="auto"
  >
    <h1 data-size="md">
      Schweigaardsgate skole
    </h1>
    <div>
      <div
        role="tablist"
        tabindex="0"
      >
        <button
          aria-selected="false"
          id="tab-«r1o»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Oversikt
        </button>
        <button
          aria-selected="false"
          id="tab-«r1p»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Prøver
        </button>
        <button
          aria-selected="true"
          id="tab-«r1q»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          Prøvesvar
        </button>
        <button
          aria-selected="false"
          id="tab-«r1r»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Innstillinger
        </button>
      </div>
      <div role="tabpanel">
        <p data-variant="default">
          Oversikt over prøvesvar for Schweigaardsgate skole.
        </p>
        <div>
          <div>
            <div data-variant="default">
              <h2>
                Viktige datoer
              </h2>
              <ul>
                <li>
                  Prøvestart: 12. april
                </li>
                <li>
                  Prøvefrist: 5. mai
                </li>
                <li>
                  Svarfrist: 28. mai
                </li>
              </ul>
            </div>
          </div>
          <div>
            <h2>
              Karakterfordeling prøvesvar
            </h2>
            <div>
              <div
                role="radiogroup"
                tabindex="0"
              >
                <button
                  data-variant="primary"
                  type="button"
                  value="graph"
                  id="togglegroup-item-«r1u»"
                  aria-checked="true"
                  aria-current="true"
                  role="radio"
                  name="togglegroup-name-«r1s»"
                  data-roving-tabindex-item="true"
                  tabindex="0"
                >
                  Vis som graf
                </button>
                <button
                  data-variant="tertiary"
                  type="button"
                  value="table"
                  id="togglegroup-item-«r20»"
                  aria-checked="false"
                  aria-current="false"
                  role="radio"
                  name="togglegroup-name-«r1s»"
                  data-roving-tabindex-item="true"
                  tabindex="-1"
                >
                  Vis som tabell
                </button>
              </div>
              <button
                data-variant="tertiary"
                type="button"
              >
                <svg
                  xmlns="http://www.w3.org/2000/svg"
                  width="1em"
                  height="1em"
                  fill="none"
                  viewbox="0 0 24 24"
                  focusable="false"
                  role="img"
                  aria-hidden="true"
                >
                  <path
                    fill="currentColor"
                    fill-rule="evenodd"
                    d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                    clip-rule="evenodd"
                  >
                  </path>
                </svg>
                Last ned PDF
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Page 4 1`] = `
<div>
  <div data-size="sm">
    <fieldset>
      <legend data-weight="medium">
        Størrelse
        <code data-size="xs">
          (data-size)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="primary"
          type="button"
          value="sm"
          id="togglegroup-item-«r24»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«r22»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          sm
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="md"
          id="togglegroup-item-«r26»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r22»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          md
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="lg"
          id="togglegroup-item-«r28»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r22»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          lg
        </button>
      </div>
    </fieldset>
    <fieldset>
      <legend data-weight="medium">
        Fargemodus
        <code data-size="xs">
          (data-color-scheme)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="tertiary"
          type="button"
          value="light"
          id="togglegroup-item-«r2b»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r29»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          light
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="dark"
          id="togglegroup-item-«r2d»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r29»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          dark
        </button>
        <button
          data-variant="primary"
          type="button"
          value="auto"
          id="togglegroup-item-«r2f»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«r29»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          auto
        </button>
      </div>
    </fieldset>
  </div>
  <div
    data-size="sm"
    data-color-scheme="auto"
  >
    <h1 data-size="md">
      Schweigaardsgate skole
    </h1>
    <div>
      <div
        role="tablist"
        tabindex="0"
      >
        <button
          aria-selected="false"
          id="tab-«r2g»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Oversikt
        </button>
        <button
          aria-selected="false"
          id="tab-«r2h»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Prøver
        </button>
        <button
          aria-selected="false"
          id="tab-«r2i»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Prøvesvar
        </button>
        <button
          aria-selected="true"
          id="tab-«r2j»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          Innstillinger
        </button>
      </div>
      <div role="tabpanel">
        <div>
          <div>
            <div data-variant="default">
              <h2>
                Viktige datoer
              </h2>
              <ul>
                <li>
                  Prøvestart: 12. april
                </li>
                <li>
                  Prøvefrist: 5. mai
                </li>
                <li>
                  Svarfrist: 28. mai
                </li>
              </ul>
            </div>
          </div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <div>
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                  aria-describedby="dark-mode:description:1"
                >
                <label
                  data-weight="regular"
                  for="dark-mode"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="dark-mode:description:1"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                  aria-describedby="auto-updates:description:1"
                >
                <label
                  data-weight="regular"
                  for="auto-updates"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="auto-updates:description:1"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </div>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset>
                <legend data-weight="medium">
                  Hvem kan se profilen din?
                </legend>
                <p data-variant="default">
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <div>
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-public"
                  >
                    Alle
                  </label>
                </div>
                <div>
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                    aria-describedby="privacy-friends:description:1"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-friends"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="privacy-friends:description:1"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </div>
                <div>
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-private"
                  >
                    Kun meg
                  </label>
                </div>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <div>
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                  aria-describedby="sound-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="sound-notifications"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="sound-notifications:description:1"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                  aria-describedby="popup-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="popup-notifications"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="popup-notifications:description:1"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                  aria-describedby="email-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="email-notifications"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="email-notifications:description:1"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Story 1`] = `
<div>
  <div data-size="sm">
    <fieldset>
      <legend data-weight="medium">
        Størrelse
        <code data-size="xs">
          (data-size)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="primary"
          type="button"
          value="sm"
          id="togglegroup-item-«r2»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«r0»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          sm
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="md"
          id="togglegroup-item-«r4»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r0»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          md
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="lg"
          id="togglegroup-item-«r6»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r0»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          lg
        </button>
      </div>
    </fieldset>
    <fieldset>
      <legend data-weight="medium">
        Fargemodus
        <code data-size="xs">
          (data-color-scheme)
        </code>
      </legend>
      <div
        role="radiogroup"
        tabindex="0"
      >
        <button
          data-variant="tertiary"
          type="button"
          value="light"
          id="togglegroup-item-«r9»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r7»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          light
        </button>
        <button
          data-variant="tertiary"
          type="button"
          value="dark"
          id="togglegroup-item-«rb»"
          aria-checked="false"
          aria-current="false"
          role="radio"
          name="togglegroup-name-«r7»"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          dark
        </button>
        <button
          data-variant="primary"
          type="button"
          value="auto"
          id="togglegroup-item-«rd»"
          aria-checked="true"
          aria-current="true"
          role="radio"
          name="togglegroup-name-«r7»"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          auto
        </button>
      </div>
    </fieldset>
  </div>
  <div
    data-size="sm"
    data-color-scheme="auto"
  >
    <h1 data-size="md">
      Schweigaardsgate skole
    </h1>
    <div>
      <div
        role="tablist"
        tabindex="0"
      >
        <button
          aria-selected="true"
          id="tab-«re»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="0"
        >
          Oversikt
        </button>
        <button
          aria-selected="false"
          id="tab-«rf»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Prøver
        </button>
        <button
          aria-selected="false"
          id="tab-«rg»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Prøvesvar
        </button>
        <button
          aria-selected="false"
          id="tab-«rh»"
          role="tab"
          type="button"
          data-roving-tabindex-item="true"
          tabindex="-1"
        >
          Innstillinger
        </button>
      </div>
      <div
        role="tabpanel"
        tabindex="0"
      >
        <p data-variant="default">
          Her får du en oversikt over all den overordnede informasjonen.
        </p>
        <div>
          <div>
            <div data-variant="default">
              <h2>
                Viktige datoer
              </h2>
              <ul>
                <li>
                  Prøvestart: 12. april
                </li>
                <li>
                  Prøvefrist: 5. mai
                </li>
                <li>
                  Svarfrist: 28. mai
                </li>
              </ul>
            </div>
          </div>
          <div>
            <h2>
              Prøveoversikt
            </h2>
            <span
              aria-hidden="true"
              data-variant="rectangle"
              style="width: 250px;"
            >
            </span>
            <span
              aria-hidden="true"
              data-variant="rectangle"
              style="width: 250px;"
            >
            </span>
            <div>
              <svg
                aria-label="laster inn"
                role="img"
                viewbox="0 0 50 50"
                data-size="lg"
              >
                <circle
                  cx="25"
                  cy="25"
                  r="20"
                  fill="none"
                  stroke-width="5"
                >
                </circle>
                <circle
                  cx="25"
                  cy="25"
                  r="20"
                  fill="none"
                  stroke-width="5"
                >
                </circle>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
